# XPlotter

./: .gitignore  CMakeLists.txt  CpuInfo.cpp  CpuInfo.h  Nonce.cpp  README.md  XPlotter.cpp  XPlotter.lst  XPlotter.vcxproj  XPlotter.vcxproj.filters  mshabal256.h  mshabal256_avx2.c
chocolatey/: xplotter.nuspec
chocolatey/tools/: chocolateyinstall.ps1
src/: CpuInfo.cpp  CpuInfo.h  Nonce.cpp  Nonce.h  main.cpp
src/crypto/mshabal/: mshabal.h  mshabal256.h  mshabal256_avx2.c  mshabal_avx1.c  mshabal_avx2.c  mshabal_sse4.c
src/crypto/shabal/: shabal.h
